# custom_decorator_test

./: README.md  pyproject.toml
src/custom_decorator_test/: decorator.py  decorator_usage.py
tests/: test_decorator.py  test_decorator_usage.py
