[tool.poetry]
name = "custom-decorator-test"
version = "0.1.0"
description = "Custom decorator in Python - mocking test"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "custom_decorator_test"
from = "src"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
